# tgbot-tamplate-form

./: .env.example  .env.test.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/locales/: en.ftl
app/src/core/: config.py  fluent.py
app/src/handlers/: __init__.py
app/src/handlers/admin/: __init__.py
app/src/handlers/user/: __init__.py  form_scene.py  menu.py  start.py
app/src/keyboards/: form.py  menu.py
app/src/middlewares/: __init__.py  i18n.py
app/src/utils/: telegram.py
docs/: PROJECT_OVERVIEW.md
tests/: __init__.py  _bootstrap_env.py  conftest.py  test_config.py  test_fluent.py  test_form_scene.py  test_keyboards.py  test_menu_handlers.py  test_middlewares.py  test_start_cmd.py  test_telegram_utils.py
tests/e2e/: __init__.py  app_builder.py  conftest.py  fake_telegram_session.py  test_bot_flow.py
