[project]
name = "tgbot-template-form"
version = "0.1.0"
description = "Telegram bot template: info menu + multi-step form (aiogram 3, Fluent, Redis)"
authors = [
    {name = "YurchenkoS"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20",
    "pydantic-settings>=2.8",
    "fluentogram>=1.2",
    "redis>=5.0",
]


[tool.poetry]
package-mode = false
# Bot sources: app/ (entrypoint app/main.py), code package app/src.
# From repo root: PYTHONPATH=app python app/main.py

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0"
ruff = "^0.9.0"
flake8 = "^7.0"
pytest = "^8.3"
pytest-asyncio = "^0.25"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# PYTHONPATH=app (see [tool.poetry]); analyzers need to resolve package `src`.
[tool.basedpyright]
pythonVersion = "3.12"
extraPaths = ["app"]

[tool.mypy]
python_version = "3.12"
mypy_path = "app"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "aiogram.*",
    "aiogram",
    "fluentogram.*",
    "fluentogram",
    "fluent_compiler.*",
]
ignore_missing_imports = true

[tool.pylint.main]
init-hook = "import sys; sys.path.insert(0, 'app')"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["app"]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:fluent_compiler.codegen",
]

[tool.ruff]
target-version = "py312"
line-length = 79
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
